# SmartEdgeSensor3DScenePerception

./: README.md  pose_hall.perspective  pose_hall.rviz
edgetpu_segmentation_msgs/: CMakeLists.txt  package.xml
edgetpu_segmentation_msgs/msg/: BoundingBox.msg  Detection.msg  DetectionStamped.msg
jetson_semantic_map/: .gitignore  CMakeLists.txt  package.xml
jetson_semantic_map/include/: JetsonSemanticFusor.h  jetson_cloud_fusion.h  jetson_color_maps.h
jetson_semantic_map/launch/: fused_cloud_ade20Kindoor.launch
jetson_semantic_map/msg/: MappOccIdx.msg
jetson_semantic_map/scripts/: map_registration.py
jetson_semantic_map/src/: SemanticFusor.cpp  cloud_fusion.cpp  color_maps.cpp  jetson_semantic_map_node.cpp
person_msgs/msg/: Person2DOcclusion.msg
pose_prior/: CMakeLists.txt
pose_prior/launch/: cameras_extrinsics.launch  demo.launch  demo_map.launch
pose_prior/src/: pose_prior_mult_node.cpp
pose_reprojection/: CMakeLists.txt  package.xml
pose_reprojection/src/: skeleton_reproj_mult_node.cpp
skeleton_3d/: .directory  CMakeLists.txt
skeleton_3d/include/skeleton_3d/: fusion_body_parts.h
skeleton_3d/src/: skeleton_3d_triang_mult_node.cpp
