<?xml version="1.0"?>
<package format="2">
  <name>jetson_semantic_map</name>
  <version>0.0.0</version>
  <description>A package to aggregate semantic scans into a semantic map image.</description>

  <maintainer email="bultmann@ais.uni-bonn.de">Simon Bultmann</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>roscpp</depend>
  <!--<depend>geometry_msgs</depend>-->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
